style(table): Fixing table alignment with headers and data, fixes #430

--- a/src/elements/table/Table.scss
+++ b/src/elements/table/Table.scss
@@ -1,4 +1,3 @@
-// Variables
 $table-header-font-weight: 400;
 $table-header-font-color: #757575;
 $table-cell-padding: 1.2rem;
@@ -7,7 +6,7 @@ $table-bg: #fff;
 $table-bg-accent: #f4f4f4;
 $table-bg-hover: rgba(0, 0, 0, .12);
 $table-bg-active: $table-bg-hover;
-$table-border-color: #f5f5f5; // Tables
+$table-border-color: #f5f5f5;
 novo-table {
     width: 100%;
     display: block;
@@ -190,7 +189,7 @@ novo-table {
                 display: flex;
                 flex-direction: row;
                 align-items: center;
-                padding: 10px;
+                padding: 10px 10px 10px 5px;
                 border-radius: 3px;
                 font-weight: $table-header-font-weight;
                 &.sortable {
